test/spec_vectors/block/fail/module_24.wat
(module (func $type-value-empty-vs-f32 (result f32) (block (result f32))))